GH-3438: Add Build from Source into CONTRIBUTING (#3440)
* GH-3438: Add Build from Source into CONTRIBUTING

Fixes https://github.com/spring-projects/spring-integration/issues/3438

It is not clear at the moment what Java version and what build system is used
in the project from the `CONTRIBUTING.adoc`

* Add `Build from Source` section into the `CONTRIBUTING.adoc`
* Point to the `CONTRIBUTING.adoc` from the top level `README.md`
* Fix the current Java version in the `README.md`
* Mention that `Squash commits` must be avoided for subsequent commits into the PR

* * Apply suggest change for docs result
* Change Travis config to use `oraclejdk11` which is minimal already for for the project