@@ -18,11 +18,7 @@ To check out the project and build from the source, do the following:
     cd spring-integration
     ./gradlew build
 
-**NOTE:** While Spring Integration runs with Java SE 6 or higher, a Java 8 compiler is required to build the project.
-
-If you encounter out of memory errors during the build, increase an available heap and permgen for Gradle:
-
-    GRADLE_OPTS='-XX:MaxPermSize=1024m -Xmx1024m'
+**NOTE:** While Spring Integration runs with Java SE 8 or higher, a Java 11 compiler is required to build the project.
 
 To build and install jars into your local Maven cache:
 
@@ -32,11 +28,11 @@ To build api Javadoc (results will be in `build/api`):
 
     ./gradlew api
 
-To build reference documentation (results will be in `build/reference`):
+To build the reference documentation (results will be in `build/docs/asciidoc` and `build/docs/asciidocPdf`):
 
     ./gradlew reference
 
-To build complete distribution including `-dist`, `-docs`, and `-schema` zip files (results will be in `build/distributions`)
+To build complete distribution including `-dist`, `-docs`, and `-schema` zip files (results will be in `build/distributions`):
 
     ./gradlew dist
 
@@ -58,6 +54,8 @@ free of errors.
 To generate IDEA metadata (.iml and .ipr files), do the following:
 
     ./gradlew idea
+
+See also [Contributor Guidelines](https://github.com/spring-projects/spring-integration/blob/master/CONTRIBUTING.adoc).
 
 # Resources
 
